--- a/styles.css
+++ b/styles.css
@@ -16,13 +16,13 @@
 body {
     margin: 0;
     padding: 0;
-    border: 30px solid bisque;
+    border: 1rem solid bisque;
 }
 
 .top-banner {
     background-color: rgb(48, 125, 74);
-    padding: 20px 600px 20px 300px;
-    border: 5px solid bisque;
+    padding: 1.5rem;
+    border: .3rem solid bisque;
     font-family: "Edu SA Beginner", cursive;
 }
 
@@ -30,25 +30,25 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 8px;
-    font-size: 1.8vh;
+    padding: .3rem;
+    font-size: 1.5rem;
 }
 
 .logo img {
-    height: 20vh;
-    width: 20vh;
+    height: 18rem;
+    width: 18rem;
     position: absolute;
-    top: 110px;
-    left: 400px;
+    top: 4.5rem;
+    left: 20rem;
 }
 
 .cart-link {
     color: whitesmoke;
     text-decoration: none;
     position: absolute;
-    left: 400px;
+    left: 20rem;
     font-family: "Edu SA Beginner", cursive;
-    font-size: 1.6vh;
+    font-size: 1rem;
 }
 
 .cart-link i {
@@ -63,8 +63,8 @@ body {
 
 .dropdown {
     position: absolute;
-    top: 43px;
-    left: 1400px;
+    top: rem;
+    left: 90rem;
 }
 
 .dropdown-content {
@@ -72,15 +72,15 @@ body {
     position: absolute;
     background-color: rgb(48, 125, 74);
     color: rgb(201, 230, 161);
-    width: 400px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    width: 25rem;
+    box-shadow: 2rem 2rem 2rem 2rem rgba(0, 0, 0, 0.2);
     z-index: 1;
-    border: 5px solid black;
+    border: .35rem solid black;
 }
 
 .dropdown-content a {
     color: rgb(201, 230, 161);
-    padding: 12px 16px;
+    padding: 1rem;
     text-decoration: none;
     display: block;
 }
@@ -97,18 +97,17 @@ body {
 .dropbtn {
     background-color: rgb(48, 125, 74);
     color: whitesmoke;
-    padding: 10px 20px;
     cursor: pointer;
-    border: 1px solid rgb(48, 125, 74);
+    border:  solid rgb(48, 125, 74);
     font-family: "Ubuntu", cursive;
-    font-size: 1.6vh;
+    font-size: 1rem;
 }
 
 #login-form {
-    padding: 15px;
+    padding: 1rem;
     background-color: rgb(48, 125, 74);
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 1rem;
+    box-shadow: 2rem 2rem 2rem 2rem rgba(0, 0, 0, 0.1);
     z-index: 2;
 }
 
@@ -172,32 +171,32 @@ body {
     background-color: rgb(7, 45, 58);
     color: white;
     text-align: center;
-    padding: 5px 0;
+    padding: 1rem;
     font-family: "Edu SA Beginner", cursive;
-    font-size: 1.9vh;
-    border: 5px solid bisque;
+    font-size: 1.3rem;
+    border: 0.3rem solid bisque;
 }
 
 .list {
     list-style: none;
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 1rem;
     position: absolute;
-    right: 300px;
-    top: 120px;
+    right: 14rem;
+    top: 7.5rem;
 }
 
 .list li {
     display: flex;
     align-items: center;
-    gap: 10px;
     color: whitesmoke;
+    gap: .8rem;
 }
 
 /* leaf icon */
 .list li i.fa-envira {
-    font-size: 130%;
+    font-size: 1.5rem;
     color: whitesmoke;
 }
 
@@ -212,8 +211,8 @@ body {
 }
 
 .introtext {
-    font-size: 2vh;
-    padding-bottom: 10px;
+    font-size: 1.4rem;
+    padding-bottom: .8rem;
     color: rgb(201, 230, 161);
 }
 
@@ -221,10 +220,10 @@ body {
     list-style: none;
     display: flex;
     flex-direction: row;
-    gap: 75px;
+    gap: 5rem;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 1rem;
 }
 
 .socials li a {
@@ -233,7 +232,7 @@ body {
 }
 
 .socials li a i {
-    font-size: 30px;
+    font-size: 1.9rem;
     transition: transform 0.3s ease, color 0.3s ease;
 }
 
@@ -246,33 +245,32 @@ body {
 .search-bar {
     display: flex;
     align-items: center;
-    margin: 0px 2px;
-    padding-left: 670px;
-    padding-top: 40px;
-    padding-bottom: 20px;
+    padding-left: 42rem;
+    padding-top: 2rem;
+    padding-bottom: 1rem;
     position: relative;
 }
 
 .search-bar input[type="text"] {
     width: 35%;
-    padding: 11px;
-    border: 1px solid black;
-    border-radius: 5px 0 0 5px;
+    padding: 0.8rem;
+    border: 0.1rem solid black;
+    border-radius: 1rem 0rem 0rem 1rem;
     outline: none;
     font-family: "Edu SA Beginner", cursive;
-    font-size: 2vh;
+    font-size: 1.4rem;
 }
 
 .search-bar button {
-    padding: 13px 15px;
+    padding: 0.8rem 0.8rem;
     background-color: rgb(48, 125, 74);
     color: rgb(201, 230, 161);
-    border: 1px solid black;
+    border: 0.1rem solid black;
     cursor: pointer;
-    border-radius: 0 5px 5px 0;
+    border-radius: 0rem 1rem 1rem 0rem;
     transition: background-color 0.3s ease;
     font-family: "Edu SA Beginner", cursive;
-    font-size: 1.8vh;
+    font-size: 1.4rem;
 }
 
 .search-bar button:hover {
@@ -332,16 +330,16 @@ body {
     display: flex;
     justify-content: space-around;
     background-color: rgb(7, 45, 58);
-    padding: 10px 400px;
+    padding: 1rem 1rem 1rem 1rem;
     font-family: "Edu SA Beginner", cursive;
-    font-size: 2.5vh;
-    border: 5px solid bisque;
+    font-size: 2rem;
+    border: 0.3rem solid bisque;
 }
 
 .navbar a {
     color: rgb(201, 230, 161);
     text-decoration: none;
-    padding: 14px 20px;
+    padding: 1rem;
     transition: background-color 0.3s ease;
 }
 
@@ -356,10 +354,10 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    padding: 3rem;
     position: relative;
     background-color: rgb(48, 125, 74);
-    border: 5px solid bisque;
+    border: 0.3rem solid bisque;
     font-family: "Ubuntu", cursive;
 }
 
@@ -371,8 +369,7 @@ body {
 }
 
 .gallery-container {
-    width: 900px;
-    height: 550px;
+    width: 56rem;
     overflow: hidden;
     position: relative;
 }
@@ -384,8 +381,7 @@ body {
 }
 
 .image-wrapper {
-    width: 900px;
-    height: 550px;
+    width: 56rem;
     position: relative;
     display: flex;
     justify-content: center;
@@ -394,24 +390,24 @@ body {
 
 .image-links {
     position: absolute;
-    bottom: 20px;
-    right: 20px;
+    bottom: 1rem;
+    right: 1rem;
     display: flex;
     flex-direction: row;
     align-items: flex-end;
-    gap: 20px;
+    gap: 1rem;
     z-index: 10;
 }
 
 .image-links a {
     color: rgb(201, 230, 161);
     background-color: rgba(0, 0, 0, 0.4);
-    padding: 10px 15px;
+    padding: 1rem;
     text-decoration: none;
-    border-radius: 5px;
+    border-radius: 0.3rem;
     transition: background-color 0.3s ease;
     font-family: "Ubuntu", sans-serif;
-    font-size: 3vh;
+    font-size: 1.8rem;
 }
 
 .image-links a:hover {
@@ -419,9 +415,8 @@ body {
 }
 
 .image-links i {
-    font-size: 22px;
-    padding-left: 10px;
-    padding-bottom: 5px;
+    font-size: 1.7rem;
+    padding-left: 1rem;
 }
 
 .image-wrapper img {
@@ -433,26 +428,26 @@ body {
 
 .image-info {
     position: absolute;
-    bottom: 20px;
-    left: 20px;
+    bottom: 1rem;
+    left: 1rem;
     background-color: rgba(0, 0, 0, 0.4);
     color: rgb(201, 230, 161);
-    padding: 10px 15px;
-    border-radius: 5px;
+    padding: 1rem 2rem;
+    border-radius: 0.3rem;
     z-index: 9;
     font-family: "Ubuntu", sans-serif;
 }
 
 .image-info h1 {
     margin: 0;
-    line-height: 1.5;
-    font-size: 3vh;
+    line-height: 3rem;
+    font-size: 2rem;
 }
 
 .image-info h2 {
     margin: 0;
-    line-height: 1.5;
-    font-size: 2.5vh;
+    line-height: 3rem;
+    font-size: 1.2rem;
     font-style: italic;
 }
 
@@ -468,7 +463,7 @@ body {
     background-color: rgba(0, 0, 0, 0.1);
     color: whitesmoke;
     border: none;
-    padding: 15px;
+    padding: 1rem;
     cursor: pointer;
     z-index: 10;
 }
@@ -478,25 +473,25 @@ body {
 }
 
 #prev {
-    left: -95px;
+    left: -10rem;
 }
 
 #next {
-    right: -105px;
+    right: -9rem;
 }
 
 .indicator-bar {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 15px 0;
+    margin: 1.5rem .5rem;
 }
 
 .indicator {
-    width: 15px;
-    height: 15px;
+    width: 1rem;
+    height: 1rem;
     background-color: rgb(201, 230, 161);
-    margin: 0 5px;
+    margin: 0rem 0.3rem;
     border-radius: 50%;
     transition: background-color 0.3s ease;
     cursor: pointer;
@@ -510,10 +505,10 @@ body {
 .plant-categories {
     display: flex;
     justify-content: space-around;
-    padding: 20px 200px;
+    padding: 2rem 20rem;
     background: rgb(7, 45, 58);
-    border: 5px solid bisque;
-    gap: 30px;
+    border: 0.3rem solid bisque;
+    gap: 3rem;
 }
 
 .plant-category {
@@ -522,23 +517,22 @@ body {
 
 .plant-category p {
     margin: 0;
-    font-size: 18px;
+    font-size: 2rem;
     font-weight: bold;
     color: rgb(201, 230, 161);
     background-color: rgb(48, 125, 74);
-    padding: 15px;
-    border-radius: 5px 5px 0 0;
-    border: 2px solid bisque;
+    padding: 1.2rem;
+    border-radius: 0.3rem 0.3rem 0rem 0rem;
+    border: 0.2rem solid bisque;
     font-family: "Ubuntu", sans-serif;
-    font-size: 3vh;
 }
 
 .plant-category img {
-    width: 350px;
-    height: 350px;
+    width: 22rem;
+    height: 25rem;
     object-fit: cover;
-    border: 2px solid rgb(201, 230, 161);
-    border-radius: 0 0 5px 5px;
+    border: 0.2rem solid rgb(201, 230, 161);
+    border-radius: 0rem 0rem 0.3rem 0.3rem;
     transition: transform 0.3s ease-in-out;
 }
 
@@ -549,19 +543,17 @@ body {
 /* *** *** *** *** *** FOOTER **** ***** **** ***** ***** */ 
 
 .footer {
-    border: 5px solid bisque;
+    border: 0.3rem solid bisque;
     color: rgb(201, 230, 161);
     background-color: rgb(48, 125, 74);
-    padding: 10px;
+    padding: 1rem;
     text-align: center;
-    font-size: 0.5em;
+    font-size: 0.5rem;
     display: flex;
     justify-content: space-around;
     font-family: "Ubuntu", sans-serif;
     font-weight: bold;
 }
-
-/* *** *** *** *** *** Mobile Modifications *** *** *** *** *** */
 
 /* Mobile Styles */
 @media (max-width: 768px) {
@@ -579,6 +571,13 @@ body {
     .logo img {
         height: 15vh; /* Smaller logo for mobile */
         width: auto; /* Maintain aspect ratio */
+        left: 7rem;
+        top: 1.4rem;
+    }
+
+    .socials {
+        max-width: 60%;
+        padding-left: 3.8rem;
     }
 
     .cart-link {
@@ -607,7 +606,17 @@ body {
     }
 
     .search-bar input[type="text"] {
-        width: 100%; /* Full width on mobile */
+        width: 90%; /* Full width on mobile */
+        border-radius: 1rem 1rem 1rem 1rem;
+    }
+
+    .search-bar button {
+        border-radius: 1rem 1rem 1rem 1rem;
+    }
+
+    .company-info .list {
+        display: none;
+        color: red;
     }
 
     .plant-categories {
@@ -617,7 +626,100 @@ body {
     }
 
     .plant-category img {
-        width: 100%; /* Full width for images */
+        width: 98%; /* Full width for images */
+        height: auto; /* Maintain aspect ratio */
+    }
+
+    .image-gallery {
+        display: none; /* hides the image gallery */
+    }
+
+    .image-wrapper {
+        width: 20%; /* Full width for mobile */
+        height: 15%;
+
+    }
+
+    .image-links a {
+        font-size: 2vh; /* Adjust font size for mobile */
+        padding: 10px; /* Adjust padding */
+    }
+    
+    /* Add any additional mobile-specific styles here */
+}
+
+/* Mobile Styles */
+@media (max-width: 1080px) {
+    .top-banner {
+        padding: 20px 20px; /* Reduce padding */
+        flex-direction: column; /* Stack elements vertically */
+        align-items: center; /* Center items */
+    }
+
+    .banner-content {
+        flex-direction: column; /* Stack logo and cart link vertically */
+        align-items: center; /* Center items */
+    }
+
+    .logo img {
+        height: 13vh; /* Smaller logo for mobile */
+        width: auto; /* Maintain aspect ratio */
+        left: 7rem;
+        top: 1.2rem;
+    }
+
+    .socials {
+        max-width: 60%;
+        padding-left: 3.8rem;
+    }
+
+    .cart-link {
+        position: relative; /* Change positioning */
+        margin-top: 30px; /* Add spacing */
+    }
+
+    .dropdown {
+        position: relative; /* Adjust dropdown positioning */
+        margin-top: 10px; /* Add spacing */
+    }
+
+    .navbar {
+        flex-direction: column; /* Stack navbar items vertically */
+        padding: 10px; /* Adjust padding */
+    }
+
+    .navbar a {
+        padding: 10px 0; /* Adjust padding for links */
+        font-size: 2.5vh; /* Adjust font size */
+    }
+
+    .search-bar {
+        flex-direction: column; /* Stack search bar elements vertically */
+        padding: 10px; /* Adjust padding */
+    }
+
+    .search-bar input[type="text"] {
+        width: 90%; /* Full width on mobile */
+        border-radius: 1rem 1rem 1rem 1rem;
+    }
+
+    .search-bar button {
+        border-radius: 1rem 1rem 1rem 1rem;
+    }
+
+    .company-info .list {
+        display: none;
+        color: red;
+    }
+
+    .plant-categories {
+        flex-direction: column; /* Stack plant categories vertically */
+        padding: 10px; /* Adjust padding */
+        gap: 10px; /* Reduce gap */
+    }
+
+    .plant-category img {
+        width: 50%; /* Full width for images */
         height: auto; /* Maintain aspect ratio */
     }
 
